@@ -45,6 +45,7 @@ wxArrayInt              T_ARRAYINT
 wxTextPos               T_IV
 wxTextAttrAlignment     T_ENUM
 wxIdleMode              T_ENUM
+wxDouble                T_DOUBLE
 
 wxFindReplaceDialogStyles T_ENUM
 wxFindReplaceFlags      T_ENUM
@@ -316,6 +317,14 @@ wxTimer *               O_WXOBJECT
 wxSingleInstanceChecker * O_NON_WXOBJECT_THR
 
 wxWave *                O_NON_WXOBJECT
+
+wxGraphicsBrush *       O_WXOBJECT
+wxGraphicsContext *     O_WXOBJECT
+wxGraphicsFont *        O_WXOBJECT
+wxGraphicsMatrix *      O_WXOBJECT
+wxGraphicsObject *      O_WXOBJECT
+wxGraphicsPath *        O_WXOBJECT
+wxGraphicsPen *         O_WXOBJECT
 
 # events
 wxEvent *               O_WXOBJECT_THR
